# aimemoryengine

./: .gitignore  Cargo.toml  IMPLEMENTATION_ROADMAP.md  MEMORY_ENGINE_SPRINT.md  README.md  SECURITY.md  SYSTEM_DIAGRAMS.md  TECHNICAL_DEVELOPMENT_SPEC.md  setup-keygen-product.js
.codecontext/: config.json  start-execution-engine.js  subscription.json
cli/: Cargo.toml
cli/src/: main.rs
gitignore-these-docs/: BUILD_TIMELINE.md  README.md  SPEC_TO_IMPLEMENTATION_MAPPING.md  TECHNICAL_DEVELOPMENT_DETAILS.md
memory-engine/: Cargo.toml
memory-engine/src/: entities.rs  lib.rs  licensing.rs  memory.rs  parser.rs  relationships.rs  storage.rs  watcher.rs
