[workspace]
members = [
    "memory-engine",
    "cli"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
regex = "1.11"
notify = "6.1"
anyhow = "1.0"
uuid = { version = "1.17", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2.2"
tempfile = "3.14"
