[package]
name = "aimemoryengine-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aimemoryengine"
path = "src/main.rs"

[dependencies]
memory-engine = { path = "../memory-engine" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
